--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -3,7 +3,10 @@
     font-size: 1.5em;
     margin-bottom: 10px;
 }
-
+.centerstage{
+    margin-left: auto;
+    margin-right: auto;
+}
 .loader {
   position:fixed;
   filter:hue-rotate(0deg);
