--- a/mysite/blog/templates/blog/post_form.html
+++ b/mysite/blog/templates/blog/post_form.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
+{% block content %}
+    <h1>New Post</h1>
+    <form class="post-form" method="POSt">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="save btn btn-default">Save</button>
+    </form>
 
-</body>
-</html>
+    <script>var editor = new MediumEditor('.editable');</script>
+{% endblock %}
