--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -3,14 +3,37 @@
     font-size: 1.5em;
     margin-bottom: 10px;
 }
+.bigbrand{
+    font-size: 1.5em;
+}
 .centerstage{
     margin-left: auto;
     margin-right: auto;
 }
+
+.postdate{
+    text-align: center;
+}
+.posttitle{
+    font-family: 'Russo One', sans-serif;
+    font-size: 1.3em;
+    text-align: center;
+}
+
+.postcontent{
+    font-family: 'Montserrat';
+    font-size: 1.5em;
+}
+
+.btn-comment{
+    position:absolute;
+    right: 0px;
+}
+
+/*Color changer below*/
 .loader {
-  position:fixed;
   filter:hue-rotate(0deg);
-  color:linear-gradient(45deg,#0f8,#08f);
+  background:linear-gradient(45deg,#0f8,#08f);
   animation:hue 10000ms infinite linear;
 
 }
