--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -2,13 +2,17 @@
 {% block content %}
     <h1 class="posttitle loader">{{ post.title }}</h1>
     {% if post.published_date %}
+
         <div class="date postdate">
              {{ post.published_date }}
         </div>
+
     {% else %}
+
         <a class="btn btn-default" href="{% url 'blog:post_publish' pk=post.pk %}">Publish</a>
+
     {% endif %}
-    <p class="postcontent">{{ post.title|safe|linebreaksbr}}</p>
+    <p class="postcontent">{{ post.text|safe|linebreaksbr}}</p>
     {% if user.is_authenticated %}
         <a class="btn btn-primary" href="{% url 'blog:post_edit' pk=pos.pk %}">
             <span class="glyphicon glyphicon-pencil"></span>
