--- a/mysite/blog/templates/blog/about.html
+++ b/mysite/blog/templates/blog/about.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
     <h1>About the company</h1>
     <h3>Thanks for checking this out</h3>
