--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -1,49 +1,43 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
+
 {% block content %}
-    <h1 class="posttitle loader">{{ post.title }}</h1>
+    <h1 class='posttitle loader'>{{ post.title }}</h1>
     {% if post.published_date %}
-
-        <div class="date postdate">
-             {{ post.published_date }}
+        <div class="postdate">
+            {{ post.published_date }}
         </div>
-
     {% else %}
-
-        <a class="btn btn-default" href="{% url 'blog:post_publish' pk=post.pk %}">Publish</a>
-
+        <a class="btn btn-primary" href="{% url 'post_publish' pk=post.pk %}">Publish Post</a>
     {% endif %}
-    <p class="postcontent">{{ post.text|safe|linebreaksbr}}</p>
+
+    <p class="postcontent">{{ post.title|safe|linebreaksbr}}</p>
     {% if user.is_authenticated %}
-        <a class="btn btn-primary" href="{% url 'blog:post_edit' pk=pos.pk %}">
-            <span class="glyphicon glyphicon-pencil"></span>
-        </a>
-        <a class="btn btn-primary" href="{% url 'blog:post_remove' pk=pos.pk %}">
-            <span class="glyphicon glyphicon-remove"></span>
-        </a>
-
+        <a class="btn btn-primary" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span> Edit Post</a>
+        <a class="btn btn-primary" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span> Remove Post</a>
     {% endif %}
+
     <hr>
 
-    <a class="btn btn-primary btn-comment" href="{% url 'blog:add_comment_to_post' pk=post.pk %}"></a>
+    <a class="btn btn-primary btn-comment" href="{% url 'add_comment_to_post' pk=post.pk %}">Add Comment</a>
+
     <div class="container">
         {% for comment in post.comments.all %}
             <br>
             {% if user.is_authenticated or comment.approved_comment %}
                 {{ comment.created_at }}
                 {% if not comment.approved_comment %}
-                     <a class="btn btn-primary" href="{% url 'blog:comment_remove' pk=comment.pk %}">
-                        <span class="glyphicon glyphicon-remove"></span>
-                    </a>
-                    <a class="btn btn-primary" href="{% url 'blog:comment_approve' pk=comment.pk %}">
-                        <span class="glyphicon glyphicon-ok"></span>
-                    </a>
+                    <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+                    <a class="btn btn-primary" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
                 {% endif %}
 
-                <p>{{ comment.text|safe|linebreaks }}</p>
+                <p>{{ comment.text|safe|linebreaks}}</p>
+
                 <p>Posted By: {{ comment.author }}</p>
+
+
             {% endif %}
             {% empty %}
-            <p>No Comments!</p>
+            <p>No Comment Posted!</p>
         {% endfor %}
     </div>
-{% endblock content %}
+{% endblock %}
