--- a/mysite/blog/templates/blog/post_draft_list.html
+++ b/mysite/blog/templates/blog/post_draft_list.html
@@ -1,10 +1,10 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
     {% for post in posts %}
         <div class="post">
             <p class="date">created: {{ post.created_at|date:'d-m-Y'}}</p>
-            <h1><a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a></h1>
+            <h1><a href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h1>
             <p>{{ post.text|truncatechars:200}}</p>
         </div>
     {% endfor %}
