--- a/mysite/blog/templates/blog/post_form.html
+++ b/mysite/blog/templates/blog/post_form.html
@@ -1,7 +1,7 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 {% block content %}
     <h1>New Post</h1>
-    <form class="post-form" method="POSt">
+    <form class="post-form" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="save btn btn-default">Save</button>
