--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -1,14 +1,14 @@
-{% extends 'blog/base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
     <div class="centerstage">
         {% for post in post_list %}
             <div class="post">
-                <h1><a href="{% url 'blog:post_detail' post.id %}">{{ post.title }}</a></h1>
+                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                 <div class="date">
-                   <p>Published on: {{post.published|date:"D M Y"}}</p>
+                   <p>Published on: {{ post.published_date }}</p>
                 </div>
-                <a href="{% url 'blog:post_detail' post.id %}">Comments: {{ post.approve_comments.count }}</a>
+                <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approve_comments.count }}</a>
             </div>
         {% endfor %}
     </div>
